--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seasons",
   "version": "0.1.0",
-  "homepage": "https://kunalbhatia18.github.io/Seasons",
+  "homepage": "https://kunalbhatia18.github.io/Forcast",
   "private": true,
   "dependencies": {
     "react": "^16.8.4",
